  * Report more video output capabilities via (port)->get_capabilities():
    colour controls, zooming, colour keying.

xine-lib (1.1.19) 2010-??-??
  * Handle odd widths properly (for ffmpeg-decoded video).
  * Make buildable with current (external) libdvdnav & libdvdread.
  * Fix V4L2 check.
  * Add support for Ogg tag 'DISCNUMBER' and ID3 tag 'TPOS'.
  * Add support for EAC3.

xine-lib (1.1.18.1) 2010-03-06
  * Oops. compat.c (for DXR3 support) was omitted.
  * Fix up V4L/V4L2 compilation. Some non-Linux have V4L2 but not V4L.
  * Fix a size check (wrong variable, causing int/ptr comparison) in rmff.c.
  * Fix build with the old, outdated and deprecated internal ffmpeg.

xine-lib (1.1.18) 2010-02-23
  * Bump the FLAC decoder's priority above ffmpegaudio. This should fix
    various problems with FLAC playback.
  * Build fix (undefined symbol) for when using older ffmpeg.
  * TTA demuxer fixes; allow seeking.
  * More meta-information tags.
    Only the Ogg demuxer knows about these at present.
  * Added basic support for .qtl (Quicktime media link).
  * "Fixed" playback of 24-bit FLAC.
  * Fixed playback of 24-bit LPCM.
  * Work around an ffmpeg bug concerning Sorenson Video 3.
  * Flash audio bug fixes, mostly concerning AAC.
  * Fix DXR3 support for newer versions of the em8300 driver.
  * Added support for WMA Pro.

xine-lib (1.1.17) 2009-12-01
  * Add support for Matroska SIMPLEBLOCK.
  * Add support for sndio (OpenBSD sound API).
  * Correct invalid MIME info in the MOD demuxer.
  * Fix a resource leak in libdvdnav.
  * Properly NUL-terminate when reading ID3v2.2 tag content.
  * Fix handling of the length of UTF-16 content sourced from, e.g., ID3 tags.
  * Make ~/.xine/catalog.cache writing safer: write a new file & atomically
    replace the old one.
  * Initial parsing of Xing header LAME extension.
  * Fixes for gapless playback.
  * Added padding delay to the first and last frames (MPEG audio).