@@ -2,7 +2,7 @@
 .SH "NAME"
 dh_xine - calculates xine\-lib dependencies
 .SH "SYNOPSIS"
-\fBdh_xine\fR [\fIdebhelper\ options\fR]
+\fBdh_xine\fR [\fIdebhelper\ options\fR] [\fIpackage\ name\ suffixes\fR]
 .SH "DESCRIPTION"
 dh_xine is a debhelper program that is responsible for generating the
 ${xine\-x:Depends} and ${xine\-console:Depends} substitutions and adding them
@@ -11,6 +11,20 @@ to substvars files.
 Each xine-lib front end is required to have one of these two substvars
 listed in its Depends line in debian/control. Using package names directly
 will, sooner or later, break.
+.PP
+By listing package name suffixes, you can generate dependencies and
+recommendations (almost) at will.  If you don't specify any, then 'x' and
+\&'console' are used, generating xine\-x:Depends and xine\-console:Depends.
+.SH "EXAMPLES"
+dh_xine is usually called indirectly in a rules file via the dh command.
+.PP
+.ft CW
+.nf
+\&        %:
+\&                dh \-\-with xine $@
+.ft R
+.PP
+It can also be called directly, prior to calling dh_gencontrol.
 .SH "CONFORMS TO"
 Debian policy, version 3.8.1
 .SH "SEE ALSO"
