@@ -130,8 +130,7 @@ binary-arch: build install
 #	ugly hack, documentation should never have been in /u/s/d/xine/...
 	mv debian/tmp/usr/share/doc/xine-lib debian/tmp/usr/share/doc/libxine${major}
 #	build libxine${major} package by moving files from libxine-dev
-	dh_install --autodest --sourcedir=debian/tmp --list-missing
-	install -m755 debian/dh_xine debian/libxine-dev/usr/bin
+	dh_install --sourcedir=debian/tmp --list-missing
 	dh_installman -plibxine-dev debian/dh_xine.1
 	dh_installdocs
 	dh_installchangelogs -k ChangeLog
