@@ -248,6 +248,7 @@ struct xine_video_port_s {
 #define VO_PROP_PAN_SCAN              9
 #define VO_PROP_TVMODE		      10
 #define VO_PROP_MAX_NUM_FRAMES        11
+#define VO_PROP_GAMMA		      12
 #define VO_PROP_ZOOM_Y                13
 #define VO_PROP_DISCARD_FRAMES        14 /* not used by drivers */
 #define VO_PROP_WINDOW_WIDTH          15 /* read-only */
@@ -307,6 +308,7 @@ struct xine_video_port_s {
 #define VO_CAP_CUSTOM_EXTENT_OVERLAY  0x01000000 /* driver can blend custom extent overlay to output extent */
 #define VO_CAP_ARGB_LAYER_OVERLAY     0x02000000 /* driver supports true color overlay */
 #define VO_CAP_VIDEO_WINDOW_OVERLAY   0x04000000 /* driver can scale video to an area within overlay */
+#define VO_CAP_GAMMA                  0x00080000
 
 
 /*
