@@ -1424,6 +1424,11 @@ static vo_driver_t *open_plugin (video_driver_class_t *class_gen, const void *vi
 	  xvmc_check_capability (this, VO_PROP_CONTRAST, attr[k],
 				 adaptor_info[adaptor_num].base_id,
 				 NULL, NULL, NULL);
+	} else if(!strcmp(name, "XV_GAMMA")) {
+	  this->capabilities |= VO_CAP_GAMMA;
+	  xvmc_check_capability (this, VO_PROP_GAMMA, attr[k],
+				 adaptor_info[adaptor_num].base_id,
+				 NULL, NULL, NULL);
 	} else if(!strcmp(name, "XV_COLORKEY")) {
 	  this->capabilities |= VO_CAP_COLORKEY;
 	  xvmc_check_capability (this, VO_PROP_COLORKEY, attr[k],
